# tools

./: .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agent/: __init__.py  (+5 more)
tools/knowledge-pipeline/: .gitignore  HANDOFF-2026-04-29.md  HANDOFF-2026-04-30.md  main.py  notes.md  pyproject.toml
tools/knowledge-pipeline/.omc/spikes/: dump-dir-gap-2026-04-30.json  parallelism-feasibility.md
tools/knowledge-pipeline/docs/: AGENTS.md
tools/knowledge-pipeline/docs/adr/: 0001-subdir-not-repo-not-pkb.md  0002-no-fork-ob1.md  0003-eventsourcing-sqlite.md  0004-sqlite-vec-local-index.md  0005-ollama-embeddings.md  0006-faster-whisper-transcription.md  0007-dual-layer-dictionary-biasing.md  0008-whisperx-speaker-diarization.md  0009-readonly-review-ui.md
tools/knowledge-pipeline/docs/architecture/: budget.md  events.md  overview.md  plugins.md  security.md
tools/knowledge-pipeline/runbooks/: bootstrap.md  overnight-run.md
tools/knowledge-pipeline/scripts/: audit_dump_dir.py  watch_recordings.sh
tools/knowledge-pipeline/src/kp/: __init__.py  cli.py
tools/knowledge-pipeline/src/kp/budget/: __init__.py  estimator.py  prices.yaml  router.py
tools/knowledge-pipeline/tests/: conftest.py
tools/knowledge-pipeline/tests/features/: analyze.feature  test_analyze.py  test_voice_memo_ingest.py  voice_memo_ingest.feature
tools/knowledge-pipeline/tests/integration/: test_discover_fingerprint.py
tools/knowledge-pipeline/tests/unit/: test_audio_fingerprinted_event.py  test_backfill_fingerprints_cli.py  test_budget.py  test_chunking.py  test_curate.py  test_diarize_device_selection.py  test_discover.py  test_embed_stage.py  test_events.py  test_fingerprint.py  test_golden_fixtures.py
(+63 files in other folders)
